fixed broken header on mobile

--- a/css/news.css
+++ b/css/news.css
@@ -17,6 +17,7 @@
     width: 100%;
     max-width: 1200px;
     text-align: center;
+    padding: 0 30px;
 }
 @media screen and (min-width: 910px){
     .container{max-width: 900px;
@@ -54,6 +55,7 @@
     align-items: center;
     display: flex;
     justify-content: space-between;
+    text-align: initial;
 }
 .nav {
     display: none;
@@ -105,10 +107,11 @@
     top: 100%; /* it will be after our .header block */
     left: 0;
     width: 100%;
+    height: 100vh;
     padding: 20px 0;
     text-align: center;
     background-color: var(--main);
-    border-top: 1px solid #0ebe72;
+    border-top: 1px solid var(--darkmaincolor);
     z-index: 999;
 }
 .search-block__field {
@@ -118,6 +121,8 @@
     background-color: var(--white);
 }
 .search-block__btn {
+    display: inline-block;
+    margin-top: 10px;
     padding: 10px 20px;
     border-radius: 5px;
     background-color: var(--oppositeback);
@@ -136,6 +141,7 @@
 #search-btn__toggle:checked ~ .search-block {
     display: block;
 }
+
 @media screen and (min-width: 779px) {
     .search-block {
         height: auto;
